Fix:add scrollbar in user component

--- a/client/src/components/Protected/protected.css
+++ b/client/src/components/Protected/protected.css
@@ -28,11 +28,18 @@
 }
 
 .recent-user-info{
+  overflow-y: auto;
+  height: 80vh;
   background: var(--white);
   border-radius: 1rem ;
   padding: 1rem;
   margin-top: 2rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+  width: 0;
+  background-color: transparent;
 }
 
 .recent-user-info h1{
